# vocab_indexer

./: CMakeLists.txt  CMakeLists.txt.user.6aa9a5f  database_structures.h  main.cpp  sample.txt  sample.txt.save  sqlindexer.cpp  sqlindexer.h  test.txt  test_simple.txt  tesuto.txt  todo.txt  vocab.txt  vocab.txt.save
